--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 pip==9.0.1
-setuptools==38.1.0
+setuptools==38.2.3
 wheel==0.30.0
 Django==1.11.7
 requests==2.18.4
 psycopg2==2.7.3.2
+scrapy==1.4.0
+scrapy-djangoitem==1.1.1
+scrapyd==1.2.0
