--- a/deploy/sdata_supervisor_dev.conf
+++ b/deploy/sdata_supervisor_dev.conf
@@ -1,9 +1,99 @@
+[program:sdata_gunicorn]
+command=/home/wqh/wangqihui/work/env/python3_env/sdata/bin/gunicorn --pythonpath=/home/wqh/wangqihui/work/SDATA SDATA.wsgi:application -c python:/home/wqh/wangqihui/work/SDATA/deploy/gunicorn_settings.py
+numprocs=1
+priorty=899
+autostart=true
+autorestart=true
+redirect_stderr=false
+stderr_logfile=/home/wqh/wangqihui/work/SDATA_LOG/gunicorn/sdata_gunicorn_stderr.log
+stdout_logfile=/home/wqh/wangqihui/work/SDATA_LOG/gunicorn/sdata_gunicorn_stdout.log
+
 [program:sdata_rq_default]
-command=/home/wqh/wangqihui/work/env/python3_env/sdata/bin/python3.6 /home/wqh/wangqihui/work/SDATA/manage.py rqworker default high low add_spider spider_pipeline scheduler spider_status rq_worker_number_control proxy_valid
+command=/home/wqh/wangqihui/work/env/python3_env/sdata/bin/python3.6 /home/wqh/wangqihui/work/SDATA/manage.py rqworker default
 numprocs=1
 priorty=999
 autostart=true
 autorestart=true
 redirect_stderr=false
-stderr_logfile=/home/wqh/wangqihui/work/SDATA_LOG/sdata_rq_default_stderr.log
-stdout_logfile=/home/wqh/wangqihui/work/SDATA_LOG/sdata_rq_default_stdout.log
+stderr_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_default_stderr.log
+stdout_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_default_stdout.log
+
+[program:sdata_rq_high]
+command=/home/wqh/wangqihui/work/env/python3_env/sdata/bin/python3.6 /home/wqh/wangqihui/work/SDATA/manage.py rqworker high
+numprocs=1
+priorty=999
+autostart=true
+autorestart=true
+redirect_stderr=false
+stderr_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_high_stderr.log
+stdout_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_high_stdout.log
+
+[program:sdata_rq_low]
+command=/home/wqh/wangqihui/work/env/python3_env/sdata/bin/python3.6 /home/wqh/wangqihui/work/SDATA/manage.py rqworker low
+numprocs=1
+priorty=999
+autostart=true
+autorestart=true
+redirect_stderr=false
+stderr_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_low_stderr.log
+stdout_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_low_stdout.log
+
+[program:sdata_rq_add_spider]
+command=/home/wqh/wangqihui/work/env/python3_env/sdata/bin/python3.6 /home/wqh/wangqihui/work/SDATA/manage.py rqworker add_spider
+numprocs=1
+priorty=999
+autostart=true
+autorestart=true
+redirect_stderr=false
+stderr_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_add_spider_stderr.log
+stdout_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_add_spider_stdout.log
+
+[program:sdata_rq_spider_pipeline]
+command=/home/wqh/wangqihui/work/env/python3_env/sdata/bin/python3.6 /home/wqh/wangqihui/work/SDATA/manage.py rqworker spider_pipeline
+numprocs=1
+priorty=999
+autostart=true
+autorestart=true
+redirect_stderr=false
+stderr_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_spider_pipeline_stderr.log
+stdout_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_spider_pipeline_stdout.log
+
+[program:sdata_rq_scheduler]
+command=/home/wqh/wangqihui/work/env/python3_env/sdata/bin/python3.6 /home/wqh/wangqihui/work/SDATA/manage.py rqworker scheduler
+numprocs=1
+priorty=999
+autostart=true
+autorestart=true
+redirect_stderr=false
+stderr_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_scheduler_stderr.log
+stdout_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_scheduler_stdout.log
+
+[program:sdata_rq_spider_status]
+command=/home/wqh/wangqihui/work/env/python3_env/sdata/bin/python3.6 /home/wqh/wangqihui/work/SDATA/manage.py rqworker spider_status
+numprocs=1
+priorty=999
+autostart=true
+autorestart=true
+redirect_stderr=false
+stderr_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_spider_status_stderr.log
+stdout_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_spider_status_stdout.log
+
+[program:sdata_rq_worker_number_control]
+command=/home/wqh/wangqihui/work/env/python3_env/sdata/bin/python3.6 /home/wqh/wangqihui/work/SDATA/manage.py rqworker rq_worker_number_control
+numprocs=1
+priorty=999
+autostart=true
+autorestart=true
+redirect_stderr=false
+stderr_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_worker_number_control_stderr.log
+stdout_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_worker_number_control_stdout.log
+
+[program:sdata_rq_proxy_valid]
+command=/home/wqh/wangqihui/work/env/python3_env/sdata/bin/python3.6 /home/wqh/wangqihui/work/SDATA/manage.py rqworker proxy_valid
+numprocs=1
+priorty=999
+autostart=true
+autorestart=true
+redirect_stderr=false
+stderr_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_proxy_valid_stderr.log
+stdout_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_proxy_valid_stdout.log
