--- a/deploy/sdata_supervisor_dev.conf
+++ b/deploy/sdata_supervisor_dev.conf
@@ -1,5 +1,6 @@
 [program:sdata_gunicorn]
-command=/home/wqh/wangqihui/work/env/python3_env/sdata/bin/gunicorn --pythonpath=/home/wqh/wangqihui/work/SDATA SDATA.wsgi:application -c python:/home/wqh/wangqihui/work/SDATA/deploy/gunicorn_settings.py
+command=/home/wqh/wangqihui/work/env/python3_env/sdata/bin/gunicorn SDATA.wsgi:application -c python:/home/wqh/wangqihui/work/SDATA/deploy/gunicorn_settings_dev.py
+directory=/home/wqh/wangqihui/work/SDATA
 numprocs=1
 priorty=899
 autostart=true
