--- a/deploy/sdata_supervisor_dev.conf
+++ b/deploy/sdata_supervisor_dev.conf
@@ -9,6 +9,27 @@ redirect_stderr=false
 stderr_logfile=/home/wqh/wangqihui/work/SDATA_LOG/gunicorn/sdata_gunicorn_stderr.log
 stdout_logfile=/home/wqh/wangqihui/work/SDATA_LOG/gunicorn/sdata_gunicorn_stdout.log
 
+[program:sdata_rqscheduler]
+command=/home/wqh/wangqihui/work/env/python3_env/sdata/bin/python3.6 /home/wqh/wangqihui/work/SDATA/manage.py rqscheduler
+numprocs=1
+priorty=999
+autostart=true
+autorestart=true
+redirect_stderr=false
+stderr_logfile=/home/wqh/wangqihui/work/SDATA_LOG/rq/sdata_rq_scheduler_stderr.log
+stdout_logfile=/home/wqh/wangqihui/work/SDATA_LOG/gunicorn/sdata_rq_scheduler_stdout.log
+
+[program:sdata_scrapyd]
+command=/home/wqh/wangqihui/work/env/python3_env/sdata/bin/scrapyd
+directory=/home/wqh/wangqihui/work/SDATA/wdata
+numprocs=1
+priorty=899
+autostart=true
+autorestart=true
+redirect_stderr=false
+stderr_logfile=/home/wqh/wangqihui/work/SDATA_LOG/scrapy/sdata_scrapyd_stderr.log
+stdout_logfile=/home/wqh/wangqihui/work/SDATA_LOG/scrapy/sdata_scrapyd_stdout.log
+
 [program:sdata_rq_default]
 command=/home/wqh/wangqihui/work/env/python3_env/sdata/bin/python3.6 /home/wqh/wangqihui/work/SDATA/manage.py rqworker default
 numprocs=1
