add deploy file

--- a/deploy/sdata_nginx_dev.conf
+++ b/deploy/sdata_nginx_dev.conf
@@ -50,14 +50,14 @@ http {
     keepalive_timeout 5;
 
     # path for static files
-    root /home/wangqihui.me/wangqihui/SDATA;
+    root /home/wqh/wangqihui/work/SDATA;
 
     location /static/ {
-		alias /home/wangqihui.me/wangqihui/SDATA/static/;
+		alias /home/wqh/wangqihui/work/SDATA/static/;
 	}
 
     location /media/ {
-        alias /home/wangqihui.me/wangqihui/SDATA/media/;
+        alias /home/wqh/wangqihui/work/SDATA/media/;
     }
 
     location / {
@@ -77,7 +77,7 @@ http {
 
     error_page 500 502 503 504 /500.html;
     location = /500.html {
-      root /home/wangqihui.me/wangqihui/SDATA/templates;
+      root /home/wqh/wangqihui/work/SDATA/templates;
     }
   }
 }
