--- a/deploy/sdata_supervisor_dev.conf
+++ b/deploy/sdata_supervisor_dev.conf
@@ -8,6 +8,7 @@ autorestart=true
 redirect_stderr=false
 stderr_logfile=/home/wqh/wangqihui/work/wangqihui.me/wangqihui/SDATA_LOG/gunicorn/sdata_gunicorn_stderr.log
 stdout_logfile=/home/wqh/wangqihui/work/wangqihui.me/wangqihui/SDATA_LOG/gunicorn/sdata_gunicorn_stdout.log
+environment=PYTHONPATH=/home/wqh/wangqihui/work/wangqihui.me/wangqihui/SDATA,DJANGO_SETTINGS_MODULE=SDATA.settings
 
 [program:sdata_rqscheduler]
 command=/home/wqh/wangqihui/work/wangqihui.me/wangqihui/python/python3_env/SDATA/bin/python3.6 /home/wqh/wangqihui/work/wangqihui.me/wangqihui/SDATA/manage.py rqscheduler
