--- a/deploy/sdata_supervisor.conf
+++ b/deploy/sdata_supervisor.conf
@@ -1,5 +1,5 @@
 [program:sdata_gunicorn]
-command=/home/wangqihui.me/wangqihui/python/python3_env/SDATA/bin/gunicorn SDATA.wsgi:application -c python:/home/wangqihui.me/wangqihui/SDATA/deploy/gunicorn_settings.py
+command=/home/wangqihui.me/wangqihui/python/python3_env/SDATA/bin/gunicorn SDATA.wsgi:application -c /home/wangqihui.me/wangqihui/SDATA/deploy/gunicorn_settings.py
 directory=/home/wangqihui.me/wangqihui/SDATA
 numprocs=1
 priorty=899
