--- a/deploy/sdata_supervisor_dev.conf
+++ b/deploy/sdata_supervisor_dev.conf
@@ -1,5 +1,5 @@
 [program:sdata_gunicorn]
-command=/home/wqh/wangqihui/work/wangqihui.me/wangqihui/python/python3_env/SDATA/bin/gunicorn SDATA.wsgi:application -c python:/home/wqh/wangqihui/work/wangqihui.me/wangqihui/SDATA/deploy/gunicorn_settings_dev.py
+command=/home/wqh/wangqihui/work/wangqihui.me/wangqihui/python/python3_env/SDATA/bin/gunicorn SDATA.wsgi:application -c /home/wqh/wangqihui/work/wangqihui.me/wangqihui/SDATA/deploy/gunicorn_settings_dev.py
 directory=/home/wqh/wangqihui/work/wangqihui.me/wangqihui/SDATA
 numprocs=1
 priorty=899
