--- a/deploy/sdata_nginx.conf
+++ b/deploy/sdata_nginx.conf
@@ -41,7 +41,7 @@ upstream sdata {
 
     location / {
       # checks for static file, if not found proxy to app
-      try_files /maintenance.html @sdata;
+      try_files /home/wangqihui.me/wangqihui/SDATA/maintenance.html @sdata;
     }
 
     location @sdata {
