--- a/deploy/sdata_nginx_dev.conf
+++ b/deploy/sdata_nginx_dev.conf
@@ -56,6 +56,11 @@ upstream sdata {
 
     error_page 500 502 503 504 /500.html;
     location = /500.html {
-      root /home/wqh/wangqihui/work/wangqihui.me/wangqihui/SDATA/templates;
+      root /home/wqh/wangqihui/work/wangqihui.me/wangqihui/SDATA/deploy/nginx;
+    }
+
+    error_page 404 /404.html;
+    location = /404.html {
+      root /home/wqh/wangqihui/work/wangqihui.me/wangqihui/SDATA/deploy/nginx;
     }
   }
