--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,14 @@ language: python
 sudo: false
 python:
   - "3.6"
+services:
+  - postgresql
+addons:
+  postgresql: "9.4"
 install:
   - pip install -r requirements.txt
+before_script:
+  - psql -c 'create database sdata;' -U postgres
+  - psql -c 'create user sdata with password "sdata";'; -U postgres
 script:
   - python manage.py test
