--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,6 @@ addons:
 install:
   - pip install -r requirements.txt
 before_script:
-  - psql -c "create user sdata with createuser password 'sdata';"
-  - psql -c "alter user sdata createdb;"
-  - psql -c "create database sdata;" -U sdata
+  - psql -c "create database sdata;" -U postgres
 script:
   - python manage.py test
