--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,5 @@ before_script:
   - psql -c "create database sdata;" -U postgres
 script:
   - python manage.py test
+after_succes:
+  - coverage run manage.py test
