--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,5 @@ before_script:
   - psql -c "create database sdata;" -U postgres
 script:
   - python manage.py test
-after_succes:
+after_success:
   - coverage run manage.py test
-  - codecov
