--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [flake8]
 ignore = F401, F403, F405,
-exclude = .git,.tox,./wdata/build/*
+exclude = .git,.tox,./wdata/build/*,./wdata/setup.py,./wdata/demo.py,./scripts/*,./app/*/migrations/*
 max-line-length = 119
